--- a/Salabytest/app/assets/stylesheets/shared/footer.css
+++ b/Salabytest/app/assets/stylesheets/shared/footer.css
@@ -72,6 +72,7 @@
     display: inline-block;
     height: 40px;
     width: 40px;
+    border-radius: 5px;
     position: fixed;
     bottom: 40px;
     right: 10px;
@@ -81,17 +82,20 @@
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    background: rgba(232, 98, 86, 0.8) url(/assets/barn/cd-top-arrow.svg) no-repeat center 50%;
+    background: #cc3327 url(/assets/barn/cd-top-arrow.svg) no-repeat center 50%;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: opacity .3s 0s, visibility 0s .3s;
     -moz-transition: opacity .3s 0s, visibility 0s .3s;
     transition: opacity .3s 0s, visibility 0s .3s;
+    
 }
 .cd-top.cd-is-visible, .cd-top.cd-fade-out, .no-touch .cd-top:hover {
     -webkit-transition: opacity .3s 0s, visibility 0s 0s;
     -moz-transition: opacity .3s 0s, visibility 0s 0s;
     transition: opacity .3s 0s, visibility 0s 0s;
+
+    
 }
 .cd-top.cd-is-visible {
     /* the button becomes visible */
@@ -104,9 +108,17 @@
 
     opacity: .5;
 }
-.no-touch .cd-top:hover {
-    background-color: #e86256;
-    opacity: 1;
+
+.cd-top{
+    -webkit-transition: all 1s ease 0s;
+    -moz-transition: all 1s ease 0s;
+    transition: all 1s ease 0s;
+}
+
+.cd-top:hover {
+    transform: scale(1.1,1.1);
+    -ms-transform: scale(1.1,1.1); /* IE 9 */
+    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
 }
 
 /*END PÅ STYLING PÅ TILBAKE TIL TOP*/
