--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -14,7 +14,7 @@
 
 <body>
 
-<img src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
+<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 
 <%= render 'shared/page_header' %>
 
@@ -27,20 +27,20 @@
       <div class="row">
         <div class="large-3 medium-6 columns barnehageButton">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
+            <img draggable="false" src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
           </div>
         </div>
         <div class="large-3 medium-6 columns skoleveienButton">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
+            <img draggable="false" src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
           </div>
         </div>
         <div class="large-3 medium-6 columns kanalSButton">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
+            <img draggable="false" src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
           </div>
         </div>
-        <div class="large-3 medium-6 columns MFLButton">
+        <div draggable="false" class="large-3 medium-6 columns MFLButton">
           <div class="menu-option">
             <img src="/assets/barn/menyer/MFL.png" alt="MFL meny">
           </div>
@@ -56,33 +56,33 @@
   <!-- mobil meny -->
   <div id="barnehageButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
+      <img draggable="false" src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
     </div>
   </div>
   <div class="row barnehage">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/barnehage/biblioteket.png" alt="bibliotek fag">
+        <img draggable="false" src="/assets/barn/barnehage/biblioteket.png" alt="bibliotek fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/barnehage/billehagen.png" alt="billehagen fag">
+        <img draggable="false" src="/assets/barn/barnehage/billehagen.png" alt="billehagen fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/barnehage/musikkfilm.png" alt="mysikkfilm fag">
+        <img draggable="false" src="/assets/barn/barnehage/musikkfilm.png" alt="mysikkfilm fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/barnehage/TilDeVoksene.png" alt="til de voksene fag">
+        <img draggable="false" src="/assets/barn/barnehage/TilDeVoksene.png" alt="til de voksene fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/barnehage/trampoline.png" alt="trampoline fag">
+        <img draggable="false" src="/assets/barn/barnehage/trampoline.png" alt="trampoline fag">
       </div>
     </div>
   </div>
@@ -92,7 +92,7 @@
   <!-- mobil meny -->
   <div id="skoleveienButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
+      <img draggable="false" src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
     </div>
   </div>
   <div class="row menu" id="skoleveienMenu">
@@ -100,22 +100,22 @@
       <div class="row">
         <div id="forste" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/forste.png" alt="1-2 klasse meny">
+            <img draggable="false" src="/assets/barn/menyer/forste.png" alt="1-2 klasse meny">
           </div>
         </div>
         <div id="andre" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/andre.png" alt="3-4 klasse meny">
+            <img draggable="false" src="/assets/barn/menyer/andre.png" alt="3-4 klasse meny">
           </div>
         </div>
         <div id="morsmaal" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/morsmaal.png" alt="morsmål meny">
+            <img draggable="false" src="/assets/barn/menyer/morsmaal.png" alt="morsmål meny">
           </div>
         </div>
         <div id="skolestart" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="/assets/barn/menyer/skolestart.png" alt="skolestart meny">
+            <img draggable="false" src="/assets/barn/menyer/skolestart.png" alt="skolestart meny">
           </div>
         </div>
       </div>
@@ -127,22 +127,22 @@
   <div class="row skolestart">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/skolestart/engelsk.png" alt="engelsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/skolestart/engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/skolestart/matte.png" alt="matte fag">
+        <img draggable="false" src="/assets/barn/skoleveien/skolestart/matte.png" alt="matte fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/skolestart/naturfag.png" alt="naturfag">
+        <img draggable="false" src="/assets/barn/skoleveien/skolestart/naturfag.png" alt="naturfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/skolestart/norsk.png" alt="norsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/skolestart/norsk.png" alt="norsk fag">
       </div>
     </div>
   </div>
@@ -152,27 +152,27 @@
   <div class="row forste">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/forste/Engelsk.png" alt="engelsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/forste/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/forste/naturfag.png" alt="naturfag fag">
+        <img draggable="false" src="/assets/barn/skoleveien/forste/naturfag.png" alt="naturfag fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/forste/norsk.png" alt="norsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/forste/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/forste/RLE.png" alt="RLE fag">
+        <img draggable="false" src="/assets/barn/skoleveien/forste/RLE.png" alt="RLE fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/forste/sammfunn.png" alt="samfunnsfag">
+        <img draggable="false" src="/assets/barn/skoleveien/forste/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
   </div>
@@ -182,27 +182,27 @@
   <div class="row andre">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/andre/Engelsk.png" alt="engelsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/andre/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/andre/naturfag.png" alt="naturfag fag">
+        <img draggable="false" src="/assets/barn/skoleveien/andre/naturfag.png" alt="naturfag fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/andre/norsk.png" alt="norsk fag">
+        <img draggable="false" src="/assets/barn/skoleveien/andre/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/andre/RLE.png" alt="RLE fag">
+        <img draggable="false" src="/assets/barn/skoleveien/andre/RLE.png" alt="RLE fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/andre/sammfunn.png" alt="samfunsfag">
+        <img draggable="false" src="/assets/barn/skoleveien/andre/sammfunn.png" alt="samfunsfag">
       </div>
     </div>
   </div>
@@ -212,42 +212,42 @@
   <div class="row morsmaal">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Filippinsk.png" alt="Filippinsk">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Filippinsk.png" alt="Filippinsk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Litausk.png" alt="Litausk">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Litausk.png" alt="Litausk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Polsk.png" alt="Polsk">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Polsk.png" alt="Polsk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Somali.png" alt="Somali">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Somali.png" alt="Somali">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Tamil.png" alt="Tamil">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tamil.png" alt="Tamil">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Tiginja.png" alt="Tiginja">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tiginja.png" alt="Tiginja">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/skoleveien/morsmaal/TilLæreren.png" alt="Til Læreren">
+        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/TilLæreren.png" alt="Til Læreren">
       </div>
     </div>
   </div>
@@ -257,7 +257,7 @@
   <!-- mobil meny -->
   <div id="kanalSButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
+      <img draggable="false" src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
     </div>
   </div>
   <div class="row kanalS">
@@ -268,57 +268,57 @@
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
+        <img draggable="false" src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
+        <img draggable="false" src="/assets/barn/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/historieNorge.png" alt="norgeshistorie fag">
+        <img draggable="false" src="/assets/barn/kanalS/historieNorge.png" alt="norgeshistorie fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/historieEuropa.png" alt="historie om europa fag">
+        <img draggable="false" src="/assets/barn/kanalS/historieEuropa.png" alt="historie om europa fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/kunst.png" alt="kunst fag">
+        <img draggable="false" src="/assets/barn/kanalS/kunst.png" alt="kunst fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/matOghelse.png" alt="mat og helse fag">
+        <img draggable="false" src="/assets/barn/kanalS/matOghelse.png" alt="mat og helse fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/matte.png" alt="matte fag">
+        <img draggable="false" src="/assets/barn/kanalS/matte.png" alt="matte fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/naturfag.png" alt="naturfag">
+        <img draggable="false" src="/assets/barn/kanalS/naturfag.png" alt="naturfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/norsk.png" alt="norsk fag">
+        <img draggable="false" src="/assets/barn/kanalS/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/Engelsk.png" alt="engelsk fag">
+        <img draggable="false" src="/assets/barn/kanalS/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
+        <img draggable="false" src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
   </div>
@@ -328,23 +328,23 @@
   <!-- mobil meny -->
   <div id="MFLButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="/assets/barn/menyer/MFL.png" alt="MFL meny">
+      <img draggable="false" src="/assets/barn/menyer/MFL.png" alt="MFL meny">
     </div>
   </div>
   <div class="row MFL">
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="/assets/barn/mfl/mflbarnehage.png" alt="barnehage fag">
+        <img draggable="false" src="/assets/barn/mfl/mflbarnehage.png" alt="barnehage fag">
       </div>
     </div>
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="/assets/barn/mfl/mflmatematikk.png" alt="matematikk fag">
+        <img draggable="false" src="/assets/barn/mfl/mflmatematikk.png" alt="matematikk fag">
       </div>
     </div>
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="/assets/barn/mfl/mflnaturfag.png" alt="naturfag">
+        <img draggable="false" src="/assets/barn/mfl/mflnaturfag.png" alt="naturfag">
       </div>
     </div>
   </div>
