lagt til --draggable="false"--
lagt til --draggable="false"-- i :
- rle
-hinduismen
- islam
- jødedommen

--- a/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
@@ -21,10 +21,10 @@
   <div class="row" id="mainMenu">
 
     <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
+      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
     </div>
     <div class="large-3 medium-6 small-6 columns">
-      <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake">
+      <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake">
       </a>
 
     </div>
@@ -39,35 +39,35 @@
   <div class="row">
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/shiva.png" alt="Shiva bilde">
+        <img src="/assets/barn/hinduisme/shiva.png" draggable="false" alt="Shiva bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/ganesha.png" alt="Ganesha bilde">
+        <img src="/assets/barn/hinduisme/ganesha.png" draggable="false" alt="Ganesha bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/murugan.png" alt="Murugan bilde">
+        <img src="/assets/barn/hinduisme/murugan.png" draggable="false" alt="Murugan bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/durga.png" alt="Durga bilde">
-      </div>
-    </div>
-
-
-    <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/film.png" alt="Film oppgaver-bilde">
+        <img src="/assets/barn/hinduisme/durga.png" draggable="false" alt="Durga bilde">
       </div>
     </div>
 
+
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
-        <img src="/assets/barn/hinduisme/tegn.png" alt="Film med tegnspråk">
+        <img src="/assets/barn/hinduisme/film.png" draggable="false" alt="Film oppgaver-bilde">
+      </div>
+    </div>
+
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/tegn.png" draggable="false" alt="Film med tegnspråk">
       </div>
     </div>
     <div class="large-3"></div>
