--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -26,11 +26,11 @@
 <section class="test">
   <div class="row" id="mainMenu">
     <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
+      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
     </div>
     
     <div class="large-3 medium-6 small-6 columns">
-      <a href="./forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
+      <a href="./forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
     </div>
   </div>
   
@@ -46,56 +46,56 @@
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" alt="Hinduismebilde">
+          <a href="hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" draggable="false" alt="Hinduismebilde">
           </a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="islam.html"><img src="/assets/barn/RLE/islam.png" alt="Islambilde"> </a>
+          <a href="islam.html"><img src="/assets/barn/RLE/islam.png" draggable="false" alt="Islambilde"> </a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kristendom.png" alt="Kristendombilde">
+          <img src="/assets/barn/RLE/kristendom.png" draggable="false" alt="Kristendombilde">
         </div>
       </div>
       
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" alt="Jødedommenbilde"></a>
+          <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" draggable="false" alt="Jødedommenbilde"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/budd.png" alt="Buddhismebilde">
+          <img src="/assets/barn/RLE/budd.png" draggable="false" alt="Buddhismebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/sikhisme.png" alt="Sikhismebilde">
+          <img src="/assets/barn/RLE/sikhisme.png" draggable="false" alt="Sikhismebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/etikk.png" alt="Etikkbilde">
+          <img src="/assets/barn/RLE/etikk.png" draggable="false" alt="Etikkbilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kirke.png" alt="Kirkebilde">
+          <img src="/assets/barn/RLE/kirke.png" draggable="false" alt="Kirkebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kunst2.png" alt="Kunstbilde">
+          <img src="/assets/barn/RLE/kunst2.png" draggable="false" alt="Kunstbilde">
         </div>
       </div>
       <div class="large-3"></div>
