--- a/Salabytest/app/views/static_pages/barn/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/islam.html.erb
@@ -26,11 +26,11 @@
 <section class="test">
   <div class="row" id="mainMenu">
     <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
+      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
     </div>
 
       <div class="large-3 medium-6 small-6 columns">
-        <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
+        <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
       </div>
   </div>
 
@@ -45,7 +45,7 @@
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/fbonn.png" alt="Forberede bønn film">
+            <img src="/assets/barn/islam/fbonn.png" draggable="false" alt="Forberede bønn film">
         </div>
       </div>
 
@@ -55,19 +55,19 @@
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover"> 
-           <img src="/assets/barn/islam/bonn.png" alt="Bønn film">
+           <img src="/assets/barn/islam/bonn.png" draggable="false" alt="Bønn film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/bonnest.png" alt="Bønnestillinger film">
+            <img src="/assets/barn/islam/bonnest.png" draggable="false" alt="Bønnestillinger film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/bonnetelt.png" alt="Bønnetelt film">
+            <img src="/assets/barn/islam/bonnetelt.png" draggable="false" alt="Bønnetelt film">
         </div>
       </div>
   </div>
@@ -75,25 +75,25 @@
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/mihrab.png" alt="Mihrab film">
+            <img src="/assets/barn/islam/mihrab.png" draggable="false" alt="Mihrab film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/minraet.png" alt="Minraet film">
+            <img src="/assets/barn/islam/minraet.png" draggable="false" alt="Minraet film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/kalligrafi.png" alt="Kalligrafi film">
+            <img src="/assets/barn/islam/kalligrafi.png" draggable="false" alt="Kalligrafi film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/kvinnedelen.png" alt="Kvinnedelen film">
+            <img src="/assets/barn/islam/kvinnedelen.png" draggable="false" alt="Kvinnedelen film">
         </div>
       </div>
   </div>
@@ -101,13 +101,13 @@
   <div class="row">
       <div class="large-6 small-6 medium-5 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/film.png" alt="Film oppgaver">
+            <img src="/assets/barn/islam/film.png" draggable="false" alt="Film oppgaver">
         </div>
       </div>
 
       <div class="large-6 small-6 medium-5 columns">
         <div class="align-center bilde-hover">
-            <img src="/assets/barn/islam/tegn.png" alt="Film med tegnspråk">
+            <img src="/assets/barn/islam/tegn.png" draggable="false" alt="Film med tegnspråk">
         </div>
       </div>
   </div>
