--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -27,11 +27,11 @@
 <section class="test">
   <div class="row" id="mainMenu">
     <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
+      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
     </div>
 
     <div class="large-3 medium-6 small-6 columns">
-      <a href="/static_pages/barn/rle"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
+      <a href="/static_pages/barn/rle"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
     </div>
   </div>
 
@@ -47,25 +47,25 @@
 
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
+              <img src="/assets/barn/jodedommen/jode.png" draggable="false" alt="Jødedommen bilde">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
+              <img src="/assets/barn/jodedommen/kippa.png" draggable="false" alt="Kippa bilde">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
+              <img src="/assets/barn//jodedommen/bonn.png" draggable="false" alt="Bønn film">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
+              <img src="/assets/barn/jodedommen/tora.png" draggable="false" alt="Tora film">
           </div>
       </div>
   </div>
@@ -73,19 +73,19 @@
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
+              <img src="/assets/barn/jodedommen/shema.png" draggable="false" alt="Shema film">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
+              <img src="/assets/barn/jodedommen/filmoppgaver.png" draggable="false" alt="Filmoppgaver bilde">
           </div>
       </div>
 
       <div class="large-6 small-12 medium-5 columns">
           <div class="align-center bilde-hover">
-              <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
+              <img src="/assets/barn/jodedommen/tegn.png" draggable="false" alt="Film med tegnspråk">
           </div>
       </div>
    </div>
