--- a/Salabytest/app/assets/stylesheets/barn/mobile.css
+++ b/Salabytest/app/assets/stylesheets/barn/mobile.css
@@ -7,7 +7,8 @@
     #kanalSButtonMobil, #MFLButtonMobil{
     	display: block;
     }
-    /*må finne en annen måte å gjemme elementene på...*/
+    /*må finne en annen måte å gjemme elementene på 
+    når man går fra stor til liten skjerm!!...*/
    /* .align-center{
     	display: none;
     }*/
