--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -98,22 +98,22 @@
   <div class="row menu" id="skoleveienMenu">
     <div class="large-12 columns">
       <div class="row">
-        <div id="forste" class="large-3 medium-6 small-6 columns">
+        <div id="forsteButton" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
             <img draggable="false" src="/assets/barn/menyer/forste.png" alt="1-2 klasse meny">
           </div>
         </div>
-        <div id="andre" class="large-3 medium-6 small-6 columns">
+        <div id="andreButton" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
             <img draggable="false" src="/assets/barn/menyer/andre.png" alt="3-4 klasse meny">
           </div>
         </div>
-        <div id="morsmaal" class="large-3 medium-6 small-6 columns">
+        <div id="morsmaalButton" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
             <img draggable="false" src="/assets/barn/menyer/morsmaal.png" alt="morsmål meny">
           </div>
         </div>
-        <div id="skolestart" class="large-3 medium-6 small-6 columns">
+        <div id="skolestartButton" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
             <img draggable="false" src="/assets/barn/menyer/skolestart.png" alt="skolestart meny">
           </div>
